self_hosted/k8s/n8n/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: n8n
  namespace: production
spec:
  type: ClusterIP
  selector:
    app: n8n
  ports:
    - port: 80
      targetPort: 5678
